Make floating stops worklist link visible when mass transit stop selected

--- a/UI/src/less/site/asset-form.less
+++ b/UI/src/less/site/asset-form.less
@@ -24,13 +24,9 @@
     top: 48px;
     left: 0;
     right: 0;
-    bottom: 128px;
+    bottom: 175px;
     overflow-y: auto;
     padding: 10px;
-
-    &.read-only {
-      bottom: 80px;
-    }
   }
 
   .form-controls {
